[package]
authors = ["rise0chen <rise0chen@163.com>"]
description = "A key-value in-file database that implements the  `KeyValueDB` trait"
edition = "2021"
license-file = "LICENSE"
name = "kvdb-file"
readme = "./README.md"
repository = "https://github.com/rise0chen/kvdb-file"
version = "0.13.0"

[dependencies]
hex = "0.4"
kvdb = {version = "0.13"}
kvdb-memorydb = {version = "0.13"}

[dev-dependencies]
kvdb-shared-tests = {version = "0.11"}
